# GYD_manager

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  resources.qrc
src/about/: aboutwindow.cpp  aboutwindow.h
src/api/: base_api.cpp  base_api.hpp  dropbox_api.cpp  dropbox_api.hpp  google_api.cpp  google_api.hpp  yandex_api.cpp  yandex_api.hpp
src/api/http/: client.cpp  client.hpp  server.cpp  server.hpp
src/forms/: about.ui  mainwindow.ui  settings.ui
src/main/: account.cpp  account.hpp  files_table_view.cpp  files_table_view.hpp  item.cpp  item.hpp  itemlist.cpp  itemlist.hpp  mainwindow.cpp  mainwindow.h
src/settings/: account_table_view.cpp  account_table_view.h  settingswindow.cpp  settingswindow.h
src/ui/: ui_about.h  ui_mainwindow.h  ui_settings.h
src/utils/: datetime.hpp  focus_delegate.hpp  tools.hpp
